syntax = "proto3";

package bshop.identity.v1;

service IdentityService {
  rpc GetUsersByIds (GetUsersByIdsRequest) returns (GetUsersByIdsResponse);
}

message GetUsersByIdsRequest {
  repeated string ids = 1;
}

message GetUsersByIdsResponse {
  message User {
    string id = 1;
    string user_name = 2;
    string email = 3;
  }

  repeated User users = 1;
}